# pitgpt-proto

./: .gitignore  AGENTS.md  README.md  hk.pkl  hk.toml  justfile  mise.toml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  macos-preview-release.yml  release.yml
app/: tauri.conf.json
app/src/: commands.rs  ingestion.rs  lib.rs  models.rs  notifications.rs  providers.rs  schedule.rs  templates.rs  workflows.rs
benchmarks/: __init__.py  cases.jsonl  report.py  runner.py  scoring.py
benchmarks/analysis_fixtures/: res-001_observations.csv  res-001_protocol.json  res-002_observations.csv  res-002_protocol.json  res-003_observations.csv  res-003_protocol.json  res-004_observations.csv  res-004_protocol.json  res-005_observations.csv  res-005_protocol.json  res-006_observations.csv  res-006_protocol.json  res-007_observations.csv  res-007_protocol.json  res-008_observations.csv  res-008_protocol.json  res-009_observations.csv  res-009_protocol.json
benchmarks/expected_outputs/: ing-001.json  ing-002.json  ing-003.json  ing-004.json  ing-005.json  ing-006.json  ing-007.json  ing-008.json  ing-009.json  ing-010.json  ing-011.json  ing-012.json  ing-013.json  ing-014.json  ing-015.json  ing-016.json  ing-017.json  ing-018.json  ing-019.json  ing-020.json  ing-021.json  ing-022.json  ing-023.json  ing-024.json  ing-025.json  ing-026.json  ing-027.json  ing-028.json  res-001.json  res-002.json  res-003.json  res-004.json  res-005.json  res-006.json  res-007.json  res-008.json  res-009.json
benchmarks/fixtures/: antihistamine_stop_for_sleep_blog.md  benzoyl_peroxide_otc_info.pdf.txt  bupropion_dose_timing_paper.pdf.txt  creatine_focus_stack_blog.md  depression_ssri_light_therapy.pdf.txt  eczema_tacrolimus_article.md  hair_mask_article.md  high_protein_breakfast_article.md  isotretinoin_cycle_post.md  microneedling_device_product_page.md  moisturizer_review_blog.md  morning_routine_blog.md  nac_adhd_abstract.pdf.txt  (+15 more)
docs/: architecture.md  operator-guide.md  prd-v1.docx  prd-v1.md  project-purpose.md  quickstart.md  release-audit-2026-04.md  release-checklist.md  scope.md
examples/: README.md  moisturizer-note.md  observations.csv  protocol.json
scripts/: __init__.py  apple-release-preflight.sh  collect-tauri-artifacts.sh  mise-env.sh  parity_analysis.py  publish-macos-preview.sh  tauri-ios-npm-shim.sh
shared/: safety_policy.md  trial_templates.json  workflows.json
src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  commands.rs  ingestion.rs  lib.rs  main.rs  models.rs  providers.rs  storage.rs
tests/: test_analysis.py  test_api.py  test_api_integration.py  test_cli.py  test_copy_guidelines.py  test_ingestion.py  test_io.py  test_methodology.py  test_models.py  test_schedule.py  test_scoring.py  test_settings.py  test_shared_data.py  test_tooling_config.py  test_workflows.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
(+80 files in other folders)
