[project]
name = "pitgpt"
version = "0.1.0"
description = "Data-only personal clinical trial engine prototype"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "typer>=0.15",
    "textual>=3.0",
    "scipy>=1.14",
    "rich>=13.0",
]

[project.scripts]
pitgpt = "pitgpt.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitgpt"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pitgpt/core/policy.py" = ["E501"]
"src/pitgpt/tui/app.py" = ["E501"]
"src/pitgpt/cli/main.py" = ["E501"]
"tests/test_ingestion.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true
